--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -27,10 +27,10 @@
     <dimen name="fab_size">56dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     
-    <!-- Bottom Navigation -->
-    <dimen name="bottom_nav_height">72dp</dimen>
-    <dimen name="bottom_nav_margin">16dp</dimen>
-    <dimen name="bottom_nav_corner">18dp</dimen>
+    <!-- Bottom Navigation (taller per request) -->
+    <dimen name="bottom_nav_height">80dp</dimen>
+    <dimen name="bottom_nav_margin">0dp</dimen>
+    <dimen name="bottom_nav_corner">0dp</dimen>
     
     <!-- Navigation Rail -->
     <dimen name="nav_rail_width">72dp</dimen>
