--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -109,8 +109,7 @@
     <!-- Bottom Navigation -->
     <style name="Strive.BottomNavigation" parent="Widget.Material3.BottomNavigationView">
         <item name="android:background">@drawable/bg_bottom_nav</item>
-        <item name="android:layout_margin">@dimen/bottom_nav_margin</item>
-        <item name="elevation">@dimen/card_elevation</item>
+        <item name="elevation">0dp</item>
         <item name="itemActiveIndicatorStyle">@style/Strive.BottomNav.ActiveIndicator</item>
         <item name="labelVisibilityMode">selected</item>
         <item name="itemIconTint">@color/bottom_nav_icon_color</item>
